# Admin_panel

./: .gitignore  docker-compose.yml  pyproject.toml
movies_admin/: Dockerfile
movies_admin/api/v1/: views.py
movies_admin/movies/migrations/: 0001_initial.py  0002_auto_20211124_2030.py
nginx/conf.d/: site.conf
